--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -15,13 +15,10 @@
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt \n",
-    "import matplotlib.colors as colors\n",
     "from sklearn.model_selection import train_test_split \n",
     "from sklearn.preprocessing import scale \n",
     "from sklearn.svm import SVC \n",
     "from sklearn.model_selection import GridSearchCV \n",
-    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "from sklearn.decomposition import PCA "
    ]
   },
@@ -1522,6 +1519,13 @@
     "\n",
     "# Create an interactive plot\n",
     "widgets.interact(create_scatterplot, attribute1=dropdown1, attribute2=dropdown2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## That's why we are going to use SVM, we need hyper-plane to do the classification."
    ]
   },
   {
